<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">积雪</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dealing">处理中,请稍等...</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="is_use_cache">true</string>

    <!-- 注册 -->
    <string name="about">关于</string>
    <string name="register_phonenum">手机号</string>
    <string name="register_phonenum_hint">请输入您的手机号码</string>
    <string name="register_phonenum_err">请输入正确的手机号码!</string>
    <string name="register_messcheck">短信验证码</string>
    <string name="register_get_messcheck">获取验证码</string>
    <string name="register_messcheck_hint">4位数字</string>
    <string name="register_into">进入积雪</string>
    <string name="register_tips">无须注册或登录，用短信进行验证，更加安全、精准、便捷！</string>
    <!-- 左侧 -->
    <string name="left_index">首页</string>
    <string name="left_speak">英语口语</string>
    <string name="left_write">英语写作</string>
    <string name="left_manage">管理课程</string>
    <string name="left_self">个人资料</string>
    <string name="left_option">意见反馈</string>
    <string name="left_about">关于积雪</string>
    <string name="left_logout">账户登出</string>
    <!-- 主页 -->
    <string name="left_index_userdetail">学员详情</string>

    <!-- 意见反馈 -->
    <string name="left_option_hint">有任何问题或建议都请告诉我们，谢谢！</string>
    <string name="left_option_submit">提交反馈</string>

    <!-- 个人资料 -->
    <string name="left_self_save">保存设置</string>
    <string name="left_self_cleancache">清除缓存</string>
    <string name="left_self_icon">头像</string>
    <string name="left_self_name">名字</string>
    <string name="left_self_name_hint">请输入名字</string>
    <string name="left_self_phonenum">手机号</string>
    <string name="left_self_phonenum_hint">请输入手机号</string>
    <string name="left_self_gender">性别</string>
    <string name="left_self_area">地区</string>
    <string name="left_self_area_hint">请输入地区</string>
    <string name="left_self_job">职业</string>
    <string name="left_self_job_hint">请输入职业</string>
    <string name="left_self_introduce">个人介绍</string>
    <string name="left_self_introduce_hint">请输入个人介绍</string>

    <!-- 关于 -->
    <string name="left_about_version">版本</string>
    <string name="left_about_type">类型</string>
    <string name="left_about_type_1">职业教育类服务平台</string>
    <string name="left_about_user">用户</string>
    <string name="left_about_user_1">学习者</string>
    <string name="left_about_url">网址</string>
    <string name="left_about_company">公司</string>
    <string name="left_about_url1">http://gixue.com</string>
    <string name="left_about_company1">长沙书之影网络科技有限公司</string>
    <string name="left_about_company2">http://shuzhiying.com</string>
    <string name="left_about_jdjx">解读积雪</string>
    <string name="left_about_jdjx_content">积雪是一个训练式在线教育平台，通过业内专业人士对学习者进行训练以及指导，让学习者在训练过程中暴露出弱项并由专业人士对其进行点评和指导来达到学习和提高的目的。
	    	\n\n积雪第一阶段主要面向广大英语学习者提供平台和服务，包括培训课程以及各种学习资料的提供和学习方法的咨询等内容，让中国的英语学习者告别哑巴英语，让广大英语学习者通过我们的特别训练计划让有基本英语基础的学习者达到能跟老外进行日常口头沟通以及做英语演讲的水平。
	    	\n\n积雪的后续阶段会推出更多适合采用训练的方式进行教育的一些课程，比如书法、美术、界面设计、软件开发等。同时我们也会寻找更多优秀的老师加入积雪的阵营，让这个平台真正发挥它的积极的作用为社会创造更多有用的价值。</string>
    <string name="left_about_bhdgs">背后的故事</string>
    <string name="left_about_bhdgs_content">积雪教育模式的创始人张友邦先生曾在新加坡南洋理工大学担任过两年的研究工作，这两年的经历让他对于教育进行了全面的思考，并通过自己如何在新加坡学习英语的经历总结出了积雪的教育模式。
	    	\n\n张先生回忆说：第一次到新加坡的时候，在飞机上吃午饭时空姐问我“Chicken or fish?“，反复听了几遍我都没听懂，最后旁边的人才告诉我是要鸡还是鱼。如果这三个单词写下来，我一定认识，但在当时我就是没能听懂。不过即使碰到了些麻烦，最后还是顺利入职。
	        \n\n而接下来更大的打击是我第一次在我老板面前做英语演讲，虽然我认真的准备了很久，但最后的结果却是，我说完我准备的第一句话后就说不下去了。虽然我讲的东西是我很熟悉的事情，但我就是无法组织出句子去表达我想说的事情。当时真想下台不讲了，最后还是在磕磕碰碰中坚持做完了演讲。离开会议室，我差点就从楼上跳下去了。
	        \n\n但幸运的是，老板对我真的很好。他后来安排我每天早上去他办公室给他讲个笑话，讲完后他都会跟我说哪些地方发错音了，哪些句子有问题。另外，每周的演讲照样在我的磕磕碰碰中继续着。慢慢的，慢慢的，我就找到了讲英语的感觉，这种感觉让我真正理解了英文的内涵，理解了英文单词背后的意义。因为说的多了，我自然而然的就能听懂别人讲的东西了。如果再有人跟我对话，除非是那个单词我根本不知道我才会听不懂。
	        \n\n是的，很多时候，找出事物背后所隐藏的那种感觉才是最重要的。一个真正的程序员，他在工作过程中能闻到代码中的不协调；一个真正的设计师，他在工作中总能感觉到不对的地方在哪里；一个真正懂英语的人，他能顺着脑子里的感觉把句子组织出来而不是在脑子里把中文翻译成英文再说出来。
	        \n\n积雪的精髓就是通过不断的训练让学习者慢慢的培养出感觉，培养出对所学习事物的敏锐嗅觉。让我们在工作中自然而然的做出好的作品，让我们在沟通过程中自然而然的折射出睿智。</string>
    <string name="left_about_szy">书之影公司</string>
    <string name="left_about_szy_content">长沙书之影网络科技有限公司（shuzhiying.com）是一家看起来很奇怪的公司，无视行业潜规则，真正为客户着想，设计师主导产品开发，员工自带电脑，办公室里总有啤酒咖啡及巧克力，我们开源核心技术，不鼓励加班，不争夺客户 ...... 我们用心做自己喜欢的事情。
        \n\n从十年前第一次创业直到今天，许许多多的梦想在不断的破灭与重构中涅槃并新生。无数次的观察、思考、行动，无数次的失败、总结、更新，无数次的燃烧、汇聚、呐喊，无数次踏上旅程面对阳光与希望，无数次拾起天真拥抱梦想与信念，虽没筑就辉煌的城池，却打造了锋利的思想之剑、勇气之剑、梦想之剑。一次次的砍下，虽没断金裂石，却坚定了风雨中的意志，要继续挥动手中长剑，劈出一条属于我们自己的通天之路。漫漫旅程，混沌初开，无处不在的都会是清晰的风景。</string>

    <!-- 管理课程 -->
    <string name="left_manage_choose">选择课程</string>
    <string name="left_manage_success">完成</string>
    <string name="left_manage_xl">训练</string>
    <string name="left_manage_dy">订阅</string>
    <string name="left_manage_yq">要求</string>
    <string name="left_manage_zq">周期</string>
    <string name="left_manage_mb">目标</string>
    <string name="left_manage_kcxlxm">课程训练项目</string>
    <string name="left_manage_dyxxzl">订阅学习资料</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

</resources>