<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_leftfragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/sidepanebackground"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/img_user"
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:background="@drawable/defaultavatar" />

                    <TextView
                        android:id="@+id/text_user"
                        style="@style/textview_black18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/transparent_white_30"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/text_index"
                        style="@style/textview_black16_addbg"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:drawableLeft="@drawable/icon_home"
                        android:gravity="center_vertical"
                        android:paddingLeft="12dp" android:drawablePadding="5dp"
                        android:text="@string/left_index" />

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/transparent_black_30"
                        android:layout_marginLeft="12dp" />

                    <LinearLayout
                        android:id="@+id/layout_left"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/transparent_white_30"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/text_manage"
                        style="@style/textview_black16_addbg"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:drawableLeft="@drawable/icon_manage"
                        android:gravity="center_vertical"
                        android:paddingLeft="12dp"
                        android:text="@string/left_manage" />

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="12dp"
                        android:background="@color/transparent_black_30" />

                    <TextView
                        android:id="@+id/text_self"
                        style="@style/textview_black16_addbg"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:drawableLeft="@drawable/icon_self"
                        android:gravity="center_vertical"
                        android:paddingLeft="12dp"
                        android:text="@string/left_self" />

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/transparent_black_30"
                        android:layout_marginLeft="12dp" />

                    <TextView
                        android:id="@+id/text_option"
                        style="@style/textview_black16_addbg"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:drawableLeft="@drawable/icon_option"
                        android:gravity="center_vertical"
                        android:paddingLeft="12dp"
                        android:text="@string/left_option" />

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/transparent_black_30"
                        android:layout_marginLeft="12dp" />

                    <TextView
                        android:id="@+id/text_about"
                        style="@style/textview_black16_addbg"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:drawableLeft="@drawable/icon_about"
                        android:gravity="center_vertical"
                        android:paddingLeft="12dp"
                        android:text="@string/left_about" />

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/transparent_black_30"
                        android:layout_marginLeft="12dp" />

                    <TextView
                        android:id="@+id/text_logout"
                        style="@style/textview_black16_addbg"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:drawableLeft="@drawable/icon_logout"
                        android:gravity="center_vertical"
                        android:paddingLeft="12dp"
                        android:text="@string/left_logout" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>