<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/windowtitle"
        android:layout_width="fill_parent"
        android:layout_height="59dp"
        layout="@layout/windowtitle" >
    </include>

    <ScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/about_logo" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:singleLine="true"
                        android:text="@string/left_about_version" />

                    <TextView
                        style="@style/textview_gray14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="Version1.0" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#ffa8abad"
                    android:orientation="horizontal" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:singleLine="true"
                        android:text="@string/left_about_type" />

                    <TextView
                        style="@style/textview_gray14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="XXXXXXXXX" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#ffa8abad"
                    android:orientation="horizontal" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:singleLine="true"
                        android:text="@string/left_about_user" />

                    <TextView
                        style="@style/textview_gray14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="XXX" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#ffa8abad"
                    android:orientation="horizontal" />

                <RelativeLayout
                    android:id="@+id/rlayout_about_url"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:singleLine="true"
                        android:text="@string/left_about_url" />

                    <TextView
                        android:id="@+id/text_about_url"
                        style="@style/textview_red14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:drawableRight="@drawable/select_right"
                        android:text="@string/left_about_url1" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#ffa8abad"
                    android:orientation="horizontal" />

                <RelativeLayout
                    android:id="@+id/rlayout_about_company"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:singleLine="true"
                        android:text="@string/left_about_company" />

                    <TextView
                        android:id="@+id/text_about_company"
                        style="@style/textview_red14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:drawableRight="@drawable/select_right"
                        android:text="@string/left_about_company1" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/textview_black16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true"
                    android:text="XXXXX" />

                <TextView
                    style="@style/textview_gray14"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="积雪是积雪是积雪是积雪是积雪是积雪是积雪是积雪是积雪是积雪是积雪是积雪是积雪是积雪是积雪是积雪是" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>